improving the simple weather example towards C reference with shared mem implementation

--- a/examples/simple_weather/config/Makefile
+++ b/examples/simple_weather/config/Makefile
@@ -33,7 +33,7 @@ helper_functions_gpu: helper_functions.o
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
-simple_weather.o: commons.o helper_functions.o time_profiling.o dynamical_processes.o physical_processes.o ${USER_LIB}
+simple_weather.o: commons.o helper_functions.o time_profiling.o dynamical_processes.o physical_processes.o kracken.o
 dynamical_processes.o: commons.o time_profiling.o
 physical_processes.o: commons.o time_profiling.o
 
