compiling c files together with hybrid sources, adding c file to simple weather example

--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -116,6 +116,8 @@ SRC_F90_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.f90' -o -name '*.f'
 SRC_F90=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_F90_PRE} --exceptions ${EXCEPTIONS})
 SRC_F90PP_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.F90' -o -name '*.F')'
 SRC_F90PP=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_F90PP_PRE} --exceptions ${EXCEPTIONS})
+SRC_C_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.c')'
+SRC_C=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_C_PRE} --exceptions ${EXCEPTIONS})
 
 SRC_LIB_FORT=$(shell find ${LIBDIR} -type f -name '*.f90')
 SRC_LIB_FORT_PP=$(shell find ${LIBDIR} -type f -name '*.F90')
@@ -126,6 +128,8 @@ SRC_TGT_FORT=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_TGT_FOR
 
 SRC_FORT_CPU=$(addprefix $(SRC_DIR_CPU),$(notdir ${SRC_TGT_FORT}))
 SRC_FORT_GPU=$(addprefix $(SRC_DIR_GPU),$(notdir ${SRC_TGT_FORT}))
+SRC_C_CPU=$(addprefix $(SRC_DIR_CPU),$(notdir ${SRC_C}))
+SRC_C_GPU=$(addprefix $(SRC_DIR_GPU),$(notdir ${SRC_C}))
 
 SRC_H90_WITHOUT_PP_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.h90')'
 SRC_H90_WITHOUT_PP=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_H90_WITHOUT_PP_PRE} --exceptions ${EXCEPTIONS})
@@ -142,8 +146,8 @@ SRC_H90TGT_GPU=$(SRC_H90TGT_GPU_PRE:.h90=.P90)
 FRAMEWORK_DIRS_CPU=$(addprefix $(SRC_DIR_CPU),$(FRAMEWORK_DIRS))
 FRAMEWORK_DIRS_GPU=$(addprefix $(SRC_DIR_GPU),$(FRAMEWORK_DIRS))
 
-SRC_ALL_CPU=${SRC_FORT_CPU} ${SRC_H90TGT_CPU}
-SRC_ALL_GPU=${SRC_FORT_GPU} ${SRC_H90TGT_GPU}
+SRC_ALL_CPU=${SRC_FORT_CPU} ${SRC_H90TGT_CPU} ${SRC_C_CPU}
+SRC_ALL_GPU=${SRC_FORT_GPU} ${SRC_H90TGT_GPU} ${SRC_C_GPU}
 #############################################################################
 
 #############################################################################
@@ -283,8 +287,9 @@ define trim
   ${trimmed}
 endef
 
-SRC_FORT_COMMON_DIRS=$(dir $(SRC_FORT)) $(dir $(SRC_H90_ALL))
+SRC_FORT_COMMON_DIRS=$(dir $(SRC_FORT)) $(dir $(SRC_H90_ALL)) $(dir $(SRC_C))
 
+vpath %.c $(SRC_FORT_COMMON_DIRS)
 vpath %.f $(SRC_FORT_COMMON_DIRS)
 vpath %.F $(SRC_FORT_COMMON_DIRS)
 vpath %.f90 $(SRC_FORT_COMMON_DIRS)
@@ -294,7 +299,7 @@ vpath %.H90 $(SRC_FORT_COMMON_DIRS)
 
 .PHONY: all clean clean_cpu clean_gpu clean_installed_executables_cpu clean_installed_executables_gpu install install_cpu install_gpu install_framework_executables_cpu install_framework_executables_gpu graphs build build_cpu build_gpu create_install_directories source source_cpu source_gpu tests tests_cpu tests_gpu framework_sources framework_sources_cpu framework_sources_gpu build_hybrid_cpu build_hybrid_gpu build_framework_cpu build_framework_gpu configfiles_cpu configfiles_gpu
 
-.SUFFIXES: .f90 .F90 .h90 .H90 .f .F .P90
+.SUFFIXES: .f90 .F90 .h90 .H90 .f .F .P90 .c
 
 all: build_cpu build_gpu
 
@@ -516,6 +521,18 @@ ${SRC_DIR_CPU}%.F90: %.F90
 	@echo ...copying file into $@ >${DEBUG_OUTPUT}
 	@mkdir -p ${SRC_DIR_CPU} && cp -fp $< $@
 
+${SRC_DIR_CPU}%.f: %.f
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_CPU} && cp -fp $< $@
+
+${SRC_DIR_CPU}%.F: %.F
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_CPU} && cp -fp $< $@
+
+${SRC_DIR_CPU}%.c: %.c
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_CPU} && cp -fp $< $@
+
 ${SRC_DIR_GPU}%.f90: %.f90
 	@echo ...copying file into $@ >${DEBUG_OUTPUT}
 	@mkdir -p ${SRC_DIR_GPU} && cp -fp $< $@
@@ -528,19 +545,15 @@ ${SRC_DIR_GPU}%.F90: %.F90
 	@echo ...copying file into $@ >${DEBUG_OUTPUT}
 	@mkdir -p ${SRC_DIR_GPU} && cp -fp $< $@
 
-${SRC_DIR_CPU}%.f: %.f
-	@echo ...copying file into $@ >${DEBUG_OUTPUT}
-	@mkdir -p ${SRC_DIR_CPU} && cp -fp $< $@
-
-${SRC_DIR_CPU}%.F: %.F
-	@echo ...copying file into $@ >${DEBUG_OUTPUT}
-	@mkdir -p ${SRC_DIR_CPU} && cp -fp $< $@
-
 ${SRC_DIR_GPU}%.f: %.f
 	@echo ...copying file into $@ >${DEBUG_OUTPUT}
 	@mkdir -p ${SRC_DIR_GPU} && cp -fp $< $@
 
 ${SRC_DIR_GPU}%.F: %.F
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_GPU} && cp -fp $< $@
+
+${SRC_DIR_GPU}%.c: %.c
 	@echo ...copying file into $@ >${DEBUG_OUTPUT}
 	@mkdir -p ${SRC_DIR_GPU} && cp -fp $< $@
 
