--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -148,6 +148,11 @@ FRAMEWORK_DIRS_GPU=$(addprefix $(SRC_DIR_GPU),$(FRAMEWORK_DIRS))
 
 SRC_ALL_CPU=${SRC_FORT_CPU} ${SRC_H90TGT_CPU} ${SRC_C_CPU}
 SRC_ALL_GPU=${SRC_FORT_GPU} ${SRC_H90TGT_GPU} ${SRC_C_GPU}
+
+CONFIG_FILES="Makefile Makesettings MakesettingsGeneral"
+CONFIG_FILES_POST=$(subst ",,${CONFIG_FILES})
+CONFIG_FILES_CPU=$(addprefix $(SRC_DIR_CPU),$(CONFIG_FILES_POST))
+CONFIG_FILES_GPU=$(addprefix $(SRC_DIR_GPU),$(CONFIG_FILES_POST))
 #############################################################################
 
 #############################################################################
@@ -298,7 +303,7 @@ vpath %.F90 $(SRC_FORT_COMMON_DIRS)
 vpath %.h90 $(SRC_FORT_COMMON_DIRS)
 vpath %.H90 $(SRC_FORT_COMMON_DIRS)
 
-.PHONY: all clean clean_cpu clean_gpu clean_installed_executables_cpu clean_installed_executables_gpu install install_cpu install_gpu install_framework_executables_cpu install_framework_executables_gpu graphs build build_cpu build_gpu create_install_directories source source_cpu source_gpu tests tests_cpu tests_gpu framework_sources framework_sources_cpu framework_sources_gpu build_hybrid_cpu build_hybrid_gpu build_framework_cpu build_framework_gpu configfiles_cpu configfiles_gpu
+.PHONY: all clean clean_cpu clean_gpu clean_installed_executables_cpu clean_installed_executables_gpu install install_cpu install_gpu install_framework_executables_cpu install_framework_executables_gpu graphs build build_cpu build_gpu create_install_directories source source_cpu source_gpu tests tests_cpu tests_gpu framework_sources framework_sources_cpu framework_sources_gpu build_hybrid_cpu build_hybrid_gpu build_framework_cpu build_framework_gpu additional_configfiles_cpu additional_configfiles_gpu
 
 .SUFFIXES: .f90 .F90 .h90 .H90 .f .F .P90 .c .cu
 
@@ -383,12 +388,12 @@ ${EXECUTABLES_CPU_OUT}: build_hybrid_cpu
 ${EXECUTABLES_GPU_OUT}: build_hybrid_gpu
 endif
 
-build_hybrid_cpu: ${CG_DIR}CG_CPU.xml configfiles_cpu ${SRC_ALL_CPU} framework_sources_cpu ${AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH_CPU}
+build_hybrid_cpu: ${CG_DIR}CG_CPU.xml ${CONFIG_FILES_CPU} additional_configfiles_cpu ${SRC_ALL_CPU} framework_sources_cpu ${AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH_CPU}
 	$(call yellowecho,"..entering ${SRC_DIR_CPU}")
 	$(call debugecho,"..cpu executable dependant on ${SRC_ALL_CPU}")
 	@cd ${SRC_DIR_CPU} && make ${BUILD_ARGS}
 
-build_hybrid_gpu: ${CG_DIR}CG_GPU.xml configfiles_gpu ${SRC_ALL_GPU} framework_sources_gpu ${AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH_GPU}
+build_hybrid_gpu: ${CG_DIR}CG_GPU.xml ${CONFIG_FILES_GPU} additional_configfiles_gpu ${SRC_ALL_GPU} framework_sources_gpu ${AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH_GPU}
 	$(call yellowecho,"..entering ${SRC_DIR_GPU}")
 	$(call debugecho,"..cpu executable dependant on ${SRC_DIR_GPU}")
 	@cd ${SRC_DIR_GPU} && make ${BUILD_ARGS} GPU_BUILD=1
@@ -419,19 +424,29 @@ endif
 tests_gpu: ${INSTALL_TARGETS_GPU}
 	${HF_DIR}/hf_bin/runTests.sh "${TEST_TARGET_GPU}" production gpu "${TEST_OUTPUT_FILE_PATTERN_POST}" "${SOURCE_THIS_BEFORE_TESTING}" "${SOURCE_THIS_AFTER_TESTING}" "${ACCURACY_TEST_PARAMETERS_POST}"
 
-configfiles_cpu:
-	@echo ...copying config files to ${SRC_DIR_CPU}
-	@( mkdir -p ${SRC_DIR_CPU} && \
-	   cp -r ${CONFIGDIR}* ${SRC_DIR_CPU} && \
-	   mv ${SRC_DIR_CPU}MakesettingsCPU ${SRC_DIR_CPU}Makesettings && \
-	   rm ${SRC_DIR_CPU}MakesettingsGPU )
+${SRC_DIR_CPU}Makesettings: ${CONFIGDIR}MakesettingsCPU
+	@mkdir -p ${SRC_DIR_CPU} && cp $< $@
 
-configfiles_gpu:
-	@echo ...copying config files to ${SRC_DIR_GPU}
-	@( mkdir -p ${SRC_DIR_GPU} && \
-	   cp -r ${CONFIGDIR}* ${SRC_DIR_GPU} && \
-	   mv ${SRC_DIR_GPU}MakesettingsGPU ${SRC_DIR_GPU}Makesettings && \
-	   rm ${SRC_DIR_GPU}MakesettingsCPU )
+${SRC_DIR_GPU}Makesettings: ${CONFIGDIR}MakesettingsGPU
+	@mkdir -p ${SRC_DIR_GPU} && cp $< $@
+
+${SRC_DIR_CPU}Makefile: ${CONFIGDIR}Makefile
+	@mkdir -p ${SRC_DIR_CPU} && cp $< $@
+
+${SRC_DIR_GPU}Makefile: ${CONFIGDIR}Makefile
+	@mkdir -p ${SRC_DIR_CPU} && cp $< $@
+
+${SRC_DIR_CPU}MakesettingsGeneral: ${CONFIGDIR}MakesettingsGeneral
+	@mkdir -p ${SRC_DIR_CPU} && cp $< $@
+
+${SRC_DIR_GPU}MakesettingsGeneral: ${CONFIGDIR}MakesettingsGeneral
+	@mkdir -p ${SRC_DIR_CPU} && cp $< $@
+
+additional_configfiles_cpu:
+	@mkdir -p ${SRC_DIR_CPU} && find ${CONFIGDIR} -maxdepth 1 -type d | awk '{if(NR>1)print}' | xargs -n1 -I {} cp -r {} ${SRC_DIR_CPU}
+
+additional_configfiles_gpu:
+	@mkdir -p ${SRC_DIR_GPU} && find ${CONFIGDIR} -maxdepth 1 -type d | awk '{if(NR>1)print}' | xargs -n1 -I {} cp -r {} ${SRC_DIR_CPU}
 
 ifdef AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH
 ${DIR_CPU}${AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH}: ${SRC_ALL_CPU} framework_sources_cpu
