--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -140,8 +140,10 @@ SRC_H90TGT_HFPP_PRE=$(addprefix $(SRC_DIR_HFPP),$(notdir $(SRC_H90_ALL)))
 SRC_H90TGT_HFPP=$(SRC_H90TGT_HFPP_PRE:.H90=.h90)
 SRC_H90TGT_CPU_PRE=$(addprefix $(SRC_DIR_CPU),$(notdir $(SRC_H90TGT_HFPP)))
 SRC_H90TGT_CPU=$(SRC_H90TGT_CPU_PRE:.h90=.P90)
+# SRC_H90TGT_CPU_TEMP=$(addsuffix .temp,${SRC_H90TGT_CPU})
 SRC_H90TGT_GPU_PRE=$(addprefix $(SRC_DIR_GPU),$(notdir $(SRC_H90TGT_HFPP)))
 SRC_H90TGT_GPU=$(SRC_H90TGT_GPU_PRE:.h90=.P90)
+# SRC_H90TGT_GPU_TEMP=$(addsuffix .temp,${SRC_H90TGT_GPU})
 
 FRAMEWORK_DIRS_CPU=$(addprefix $(SRC_DIR_CPU),$(FRAMEWORK_DIRS))
 FRAMEWORK_DIRS_GPU=$(addprefix $(SRC_DIR_GPU),$(FRAMEWORK_DIRS))
@@ -586,9 +588,13 @@ ${SRC_DIR_HFPP}%.h90: %.h90
 	@mkdir -p ${SRC_DIR_HFPP} && python ${TOOLSDIR}/strip_fortran_line_continuations.py $< > $@
 
 define generate_p90_rules
-$(1)%.P90: ${SRC_DIR_HFPP}%.h90 $(2)implementationNamesByTemplate ${CG_DIR}$(3)
+$(1)%.P90.temp: ${SRC_DIR_HFPP}%.h90 $(2)implementationNamesByTemplate ${CG_DIR}$(3)
 	@$$(call yellowecho,"...........converting $$(notdir $$<)")
-	@${HF_DIR}/hf_bin/convert.sh $$< $$@ ${CG_DIR}$(3) $(2) $(1) "${H90_PREPROCESSOR_ARGS}" "${OPTION_FLAGS}"
+	@python ${python_flags} ${HF_DIR}/hf_processor/generateF90fromH90AndAnalyzedCallGraph.py -i $$< -c ${CG_DIR}$(3) --implementation=$(2)implementationNamesByTemplate --optionFlags="${OPTION_FLAGS} ${preprocessor_args}" > $$@
+
+$(1)%.P90: $(1)%.P90.temp
+	@$$(call yellowecho,"...........copy $$(notdir $$<) if new or changed")
+	@${HF_DIR}/hf_bin/copy_if_new_or_changed.sh $$< $$@
 endef
 
 $(eval $(call generate_p90_rules,${SRC_DIR_CPU},${DIR_CPU},${CPU_CALLGRAPH_FILE}))
