fixed bug in build system in relation to config subdirectories for the GPU build

--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -446,7 +446,7 @@ additional_configfiles_cpu:
 	@mkdir -p ${SRC_DIR_CPU} && find ${CONFIGDIR} -maxdepth 1 -type d | awk '{if(NR>1)print}' | xargs -n1 -I {} cp -r {} ${SRC_DIR_CPU}
 
 additional_configfiles_gpu:
-	@mkdir -p ${SRC_DIR_GPU} && find ${CONFIGDIR} -maxdepth 1 -type d | awk '{if(NR>1)print}' | xargs -n1 -I {} cp -r {} ${SRC_DIR_CPU}
+	@mkdir -p ${SRC_DIR_GPU} && find ${CONFIGDIR} -maxdepth 1 -type d | awk '{if(NR>1)print}' | xargs -n1 -I {} cp -r {} ${SRC_DIR_GPU}
 
 ifdef AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH
 ${DIR_CPU}${AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH}: ${SRC_ALL_CPU} framework_sources_cpu
