--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -590,7 +590,7 @@ ${SRC_DIR_HFPP}%.h90: %.h90
 define generate_p90_rules
 $(1)%.P90.temp: ${SRC_DIR_HFPP}%.h90 $(2)implementationNamesByTemplate ${CG_DIR}$(3)
 	@$$(call yellowecho,"...........converting $$(notdir $$<)")
-	@python ${python_flags} ${HF_DIR}/hf_processor/generateF90fromH90AndAnalyzedCallGraph.py -i $$< -c ${CG_DIR}$(3) --implementation=$(2)implementationNamesByTemplate --optionFlags=${OPTION_FLAGS},${preprocessor_args} > $$@
+	python ${python_flags} ${HF_DIR}/hf_processor/generateF90fromH90AndAnalyzedCallGraph.py -i $$< -c ${CG_DIR}$(3) ${H90_PREPROCESSOR_ARGS} --implementation=$(2)implementationNamesByTemplate --optionFlags=${OPTION_FLAGS},${preprocessor_args} > $$@
 
 $(1)%.P90: $(1)%.P90.temp
 	@$$(call yellowecho,"...........copy $$(notdir $$<) if new or changed")
