--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -584,7 +584,7 @@ ${SRC_DIR_GPU}%.cu: %.cu
 	@mkdir -p ${SRC_DIR_GPU} && cp -fp $< $@
 
 ${SRC_DIR_HFPP}%.h90: %.h90
-	@echo ...........preprocessing file $<
+	@echo ...........preparing file for HF parsing: $<
 	@mkdir -p ${SRC_DIR_HFPP} && python ${TOOLSDIR}/strip_fortran_line_continuations.py $< > $@
 
 define generate_p90_rules
@@ -601,5 +601,5 @@ $(eval $(call generate_p90_rules,${SRC_DIR_CPU},${DIR_CPU},${CPU_CALLGRAPH_FILE}
 $(eval $(call generate_p90_rules,${SRC_DIR_GPU},${DIR_GPU},${GPU_CALLGRAPH_FILE}))
 
 ${SRC_DIR_HFPP}%.h90: %.H90
-	@echo ...........preprocessing file $<
-	@mkdir -p ${SRC_DIR_HFPP} && cd $(dir $<) && < $(notdir $<) sed "s/\/\//¢/g" | gcc -E -w ${PFLAGS} - | tr "\`" '\n' | sed "s/¢/\/\//g" | python ${TOOLSDIR}/strip_fortran_line_continuations.py > $@
+	@echo ...........preprocessing and preparing file for HF parsing: $<
+	@mkdir -p ${SRC_DIR_HFPP} && cd $(dir $<) && set -o pipefail && < $(notdir $<) sed "s/\/\//¢/g" | gcc -E -w ${PFLAGS} - | tr "\`" '\n' | sed "s/¢/\/\//g" | python ${TOOLSDIR}/strip_fortran_line_continuations.py > $@
