--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -122,6 +122,7 @@ SRC_C=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_C_PRE} --excep
 SRC_LIB_FORT=$(shell find ${LIBDIR} -type f -name '*.f90')
 SRC_LIB_FORT_PP=$(shell find ${LIBDIR} -type f -name '*.F90')
 SRC_LIB_H90=$(shell find ${LIBDIR} -type f -name '*.h90')
+SRC_LIB_H90_WITH_PP=$(shell find ${LIBDIR} -type f -name '*.H90')
 SRC_FORT=${SRC_F90} ${SRC_F90PP} ${SRC_LIB_FORT} ${SRC_LIB_FORT_PP}
 SRC_TGT_FORT_PRE='$(SRC_FORT:.F90=.P90)'
 SRC_TGT_FORT=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_TGT_FORT_PRE} --exceptions 'storage_order') storage_order.F90
@@ -135,7 +136,7 @@ SRC_H90_WITHOUT_PP_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.h90')'
 SRC_H90_WITHOUT_PP=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_H90_WITHOUT_PP_PRE} --exceptions ${EXCEPTIONS})
 SRC_H90_WITH_PP_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.H90')'
 SRC_H90_WITH_PP=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_H90_WITH_PP_PRE} --exceptions ${EXCEPTIONS})
-SRC_H90_ALL=${SRC_H90_WITHOUT_PP} ${SRC_H90_WITH_PP} ${SRC_LIB_H90}
+SRC_H90_ALL=${SRC_H90_WITHOUT_PP} ${SRC_H90_WITH_PP} ${SRC_LIB_H90} ${SRC_LIB_H90_WITH_PP}
 SRC_H90TGT_HFPP_PRE=$(addprefix $(SRC_DIR_HFPP),$(notdir $(SRC_H90_ALL)))
 SRC_H90TGT_HFPP=$(SRC_H90TGT_HFPP_PRE:.H90=.h90)
 SRC_H90TGT_CPU_PRE=$(addprefix $(SRC_DIR_CPU),$(notdir $(SRC_H90TGT_HFPP)))
