fixed particle test, bugfix in logging setup

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ csthesis.*
 doc/src/declarationOfOriginality.pdf
 doc/src/HFDocumentation.pdf
 examples/poisson2d_fem_iterative/input.dat
+examples/particle/test/*
